[gd_scene load_steps=5 format=3 uid="uid://qhltgybk1u3s"]

[ext_resource type="Script" uid="uid://hjyqxvwyh57q" path="res://scripts/player.gd" id="1_3vyb7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vyb7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3vyb7")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_3vyb7")

[node name="ItemArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemArea"]
position = Vector2(21.935, 0)
shape = SubResource("RectangleShape2D_g2els")

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
